--- a/giao_vien.ui
+++ b/giao_vien.ui
@@ -49,7 +49,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
       <string>Lớp</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="sinhVien">
      <property name="geometry">
       <rect>
        <x>80</x>
