--- a/giao_vien.ui
+++ b/giao_vien.ui
@@ -154,6 +154,14 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
        <height>28</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: #F0F0F0;
+color: black;
+font-size: 16px;
+padding-left: 85px;</string>
+     </property>
      <property name="placeholderText">
       <string>MSSV</string>
      </property>
@@ -187,37 +195,64 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>30</y>
-        <width>231</width>
-        <height>29</height>
+        <y>28</y>
+        <width>111</width>
+        <height>51</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+      </property>
       <property name="text">
-       <string>Thêm một người</string>
+       <string>Một Người</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_5">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>60</y>
-        <width>231</width>
-        <height>29</height>
+        <x>140</x>
+        <y>28</y>
+        <width>111</width>
+        <height>51</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+      </property>
       <property name="text">
-       <string>Thêm nhiều người</string>
+       <string>Danh Sách</string>
       </property>
      </widget>
     </widget>
     <widget class="QPushButton" name="sapXep">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>320</x>
        <y>60</y>
        <width>231</width>
        <height>29</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
      </property>
      <property name="text">
       <string>Sắp xếp theo tên</string>
