--- a/giao_vien.ui
+++ b/giao_vien.ui
@@ -213,7 +213,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
        <string>Một Người</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_5">
+     <widget class="QPushButton" name="themNhieuSV">
       <property name="geometry">
        <rect>
         <x>140</x>
@@ -256,6 +256,56 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
      </property>
      <property name="text">
       <string>Sắp xếp theo tên</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="locLop">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>120</y>
+       <width>251</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QComboBox {
+	border: 2px solid gray;
+	border-radius: 20px;
+	background-color: #F0F0F0;
+	color: black;
+	font-size: 16px;
+text-align: center;
+}
+
+QComboBox::drop-down {
+width: 30px;
+subcontrol-origin: padding;
+subcontrol-position: top right;
+border: 2px solid gray;
+border-radius: 10px;
+background-color: #F0F0F0;
+}
+
+QComboBox::down-arrow {
+    image: url(:/logo/down-arrow (1).png); /* Đường dẫn hình ảnh mũi tên */
+    width: 20px;
+    height: 20px;
+}
+
+QComboBox QAbstractItemView {
+    border: 2px solid gray;
+    border-radius: 10px;
+    background-color: white;
+    selection-background-color: lightblue;  /* Màu nền của mục được chọn */
+    selection-color: black;  /* Màu chữ của mục được chọn */
+    padding: 5px;
+	font-size: 12px;
+}
+
+</string>
+     </property>
+     <property name="placeholderText">
+      <string>                      Lọc Lớp</string>
      </property>
     </widget>
    </widget>
