--- a/giao_vien.ui
+++ b/giao_vien.ui
@@ -72,7 +72,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
       <string>Sinh Viên</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="cauHoi">
      <property name="geometry">
       <rect>
        <x>80</x>
@@ -318,6 +318,160 @@ QComboBox QAbstractItemView {
       <height>671</height>
      </rect>
     </property>
+   </widget>
+   <widget class="QGroupBox" name="tinhNangCauHoi">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>0</y>
+      <width>1201</width>
+      <height>191</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Tính Năng</string>
+    </property>
+    <widget class="QLineEdit" name="timMSSV_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>261</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: #F0F0F0;
+color: black;
+font-size: 16px;
+padding-left: 85px;</string>
+     </property>
+     <property name="placeholderText">
+      <string>MSSV</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>261</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Tìm kiếm:</string>
+     </property>
+    </widget>
+    <widget class="QGroupBox" name="themSinhVien_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>261</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Thêm Sinh Viên</string>
+     </property>
+     <widget class="QPushButton" name="them1sv_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>28</y>
+        <width>111</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+      </property>
+      <property name="text">
+       <string>Một Người</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="themNhieuSV_3">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>28</y>
+        <width>111</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+      </property>
+      <property name="text">
+       <string>Danh Sách</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QComboBox" name="locLop_3">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>120</y>
+       <width>251</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QComboBox {
+	border: 2px solid gray;
+	border-radius: 20px;
+	background-color: #F0F0F0;
+	color: black;
+	font-size: 16px;
+text-align: center;
+}
+
+QComboBox::drop-down {
+width: 30px;
+subcontrol-origin: padding;
+subcontrol-position: top right;
+border: 2px solid gray;
+border-radius: 10px;
+background-color: #F0F0F0;
+}
+
+QComboBox::down-arrow {
+    image: url(:/logo/down-arrow (1).png); /* Đường dẫn hình ảnh mũi tên */
+    width: 20px;
+    height: 20px;
+}
+
+QComboBox QAbstractItemView {
+    border: 2px solid gray;
+    border-radius: 10px;
+    background-color: white;
+    selection-background-color: lightblue;  /* Màu nền của mục được chọn */
+    selection-color: black;  /* Màu chữ của mục được chọn */
+    padding: 5px;
+	font-size: 12px;
+}
+
+</string>
+     </property>
+     <property name="placeholderText">
+      <string>                      Lọc Lớp</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
