--- a/hieuchinh_lop.ui
+++ b/hieuchinh_lop.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>hieuchinh_lop</class>
- <widget class="QDialog" name="hieuchinh_lop">
+ <class>HieuChinh_Lop</class>
+ <widget class="QDialog" name="HieuChinh_Lop">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -84,7 +84,7 @@ padding-left: 85px;</string>
     <string>    Ten Lop</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="LoiMaLop">
    <property name="geometry">
     <rect>
      <x>70</x>
@@ -94,10 +94,10 @@ padding-left: 85px;</string>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="LoiTenLop">
    <property name="geometry">
     <rect>
      <x>380</x>
@@ -107,7 +107,7 @@ padding-left: 85px;</string>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string/>
    </property>
   </widget>
  </widget>
@@ -116,7 +116,7 @@ padding-left: 85px;</string>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>hieuchinh_lop</receiver>
+   <receiver>HieuChinh_Lop</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -132,7 +132,7 @@ padding-left: 85px;</string>
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>hieuchinh_lop</receiver>
+   <receiver>HieuChinh_Lop</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
