--- a/giao_vien.ui
+++ b/giao_vien.ui
@@ -26,7 +26,7 @@
     <property name="title">
      <string>Tuỳ Chọn</string>
     </property>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="lop">
      <property name="geometry">
       <rect>
        <x>80</x>
@@ -473,6 +473,182 @@ QComboBox QAbstractItemView {
      </property>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="tinhNangLop">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>0</y>
+      <width>1201</width>
+      <height>191</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Tính Năng</string>
+    </property>
+    <widget class="QLineEdit" name="timMaLop">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>261</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: #F0F0F0;
+color: black;
+font-size: 16px;
+padding-left: 85px;</string>
+     </property>
+     <property name="placeholderText">
+      <string>Mã Lớp</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>261</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Tìm kiếm:</string>
+     </property>
+    </widget>
+    <widget class="QGroupBox" name="themLop">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>261</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Thêm Lớp</string>
+     </property>
+     <widget class="QPushButton" name="themlop">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>28</y>
+        <width>111</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+      </property>
+      <property name="text">
+       <string>Một Lớp</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="themNhieuLop">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>28</y>
+        <width>111</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+      </property>
+      <property name="text">
+       <string>Danh Sách</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QPushButton" name="sapXep_3">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>60</y>
+       <width>231</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid gray;
+border-radius: 10px;
+background-color: rgb(255, 35, 35);
+color: white;
+font-size: 16px;
+font-weight: bold;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);</string>
+     </property>
+     <property name="text">
+      <string>Sắp xếp theo mã lớp</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="locLop_2">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>120</y>
+       <width>251</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QComboBox {
+	border: 2px solid gray;
+	border-radius: 20px;
+	background-color: #F0F0F0;
+	color: black;
+	font-size: 16px;
+text-align: center;
+}
+
+QComboBox::drop-down {
+width: 30px;
+subcontrol-origin: padding;
+subcontrol-position: top right;
+border: 2px solid gray;
+border-radius: 10px;
+background-color: #F0F0F0;
+}
+
+QComboBox::down-arrow {
+    image: url(:/logo/down-arrow (1).png); /* Đường dẫn hình ảnh mũi tên */
+    width: 20px;
+    height: 20px;
+}
+
+QComboBox QAbstractItemView {
+    border: 2px solid gray;
+    border-radius: 10px;
+    background-color: white;
+    selection-background-color: lightblue;  /* Màu nền của mục được chọn */
+    selection-color: black;  /* Màu chữ của mục được chọn */
+    padding: 5px;
+	font-size: 12px;
+}
+
+</string>
+     </property>
+     <property name="placeholderText">
+      <string>                      Lọc Lớp</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -480,7 +656,7 @@ QComboBox QAbstractItemView {
      <x>0</x>
      <y>0</y>
      <width>1687</width>
-     <height>26</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
