--- a/them_lop.ui
+++ b/them_lop.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>them_lop</class>
- <widget class="QDialog" name="them_lop">
+ <class>Them_Lop</class>
+ <widget class="QDialog" name="Them_Lop">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -84,7 +84,7 @@ padding-left: 85px;</string>
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:24pt; font-weight:700; color:#ff0000;&quot;&gt;Thêm Lop&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="LoiMaLop">
    <property name="geometry">
     <rect>
      <x>70</x>
@@ -97,7 +97,7 @@ padding-left: 85px;</string>
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="LoiTenLop">
    <property name="geometry">
     <rect>
      <x>370</x>
@@ -116,7 +116,7 @@ padding-left: 85px;</string>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>them_lop</receiver>
+   <receiver>Them_Lop</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -132,7 +132,7 @@ padding-left: 85px;</string>
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>them_lop</receiver>
+   <receiver>Them_Lop</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
